--- a/package.json
+++ b/package.json
@@ -9,5 +9,10 @@
   },
   "scripts": {
     "build:css": "sass ./app/assets/stylesheets/application.bootstrap.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules"
+  },
+  "devDependencies": {
+    "@prettier/plugin-ruby": "^3.2.2",
+    "prettier": "^2.7.1",
+    "prettier-plugin-erb": "^0.4.0"
   }
 }
