--- a/config/database.yml
+++ b/config/database.yml
@@ -94,6 +94,6 @@ test:
 #   password: <%= ENV["BLOG_APP_DATABASE_PASSWORD"] %>
 
 production:
-  <<: *default
+  adapter: cockroachdb
   url: <%= ENV['DATABASE_URL'] %>
   sslrootcert: "./root.crt"
